--- a/client/src/componenets/influencer/Discover.module.css
+++ b/client/src/componenets/influencer/Discover.module.css
@@ -1,5 +1,5 @@
 .discover_sec{
-    background: url(/public/images/bore-bg.jpg) no-repeat;
+    background: url(/images/bore-bg.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     padding: 65px 0;
