--- a/client/src/componenets/login/Login.module.css
+++ b/client/src/componenets/login/Login.module.css
@@ -109,6 +109,7 @@
   align-items: center;
   font-weight: 500;
   gap: 10px;
+  font-size: 1.5rem;
   border: 1px solid #ededef;
   background-color: white;
   cursor: pointer;
