--- a/client/src/componenets/register/Register.module.css
+++ b/client/src/componenets/register/Register.module.css
@@ -119,3 +119,13 @@
 .btn:hover {
   border: 1px solid #2d79f3;
 }
+.error {
+  color: red;
+  font-size: 14px;
+  margin-top: 5px;
+}
+.success {
+  color: green;
+  font-size: 14px;
+  margin-top: 5px;
+}
